--- a/composer.json
+++ b/composer.json
@@ -14,7 +14,7 @@
         }
     ],
     "require": {
-        "php": ">=7.3.4",
-        "another-vendor/package": "1.*"
+        "php": ">=7.3.4"
+        
     }
 }
